# sort-sh

./: LICENSE  Main.hs  sort-sh.cabal
